Archive2/89/adae88b98c23e6/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:2:1: error: 'string' in namespace 'std' does not name a type
 std::string rangeToString(Iterator begin, Iterator end, Delimiter prefix, Delimiter suffix, Delimiter separator)
 ^
